--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-rest": "^2.9.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
+    "csurf": "^1.9.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.1",
